# lingua-studio

./: .gitignore  generate_license.bat  lingua.spec  lingua_installer.iss  lingua_mac.spec  lingua_onefile.spec  lingua_setup.iss  pyproject.toml  test_engine.py
.github/workflows/: macos_build.yml  windows_build.yml
legacy_plugin_export/: advanced.py
legacy_plugin_export/lib/: conversion.py  element.py  translation.py
lingua/: __init__.py  __main__.py
lingua/core/: __init__.py  cache.py  cache_importer.py  config.py  conversion.py  dynamic_glossary.py  element.py  epub_normalizer.py  export.py  handler.py  i18n.py  license.py  style_checker.py  translation.py  utils.py
lingua/engines/: __init__.py  anthropic.py  baidu.py  base.py  custom.py  deepl.py  deepseek.py  gemini_cache.py  google.py  microsoft.py  ollama.py  openai.py  prompt_extensions.py  youdao.py
lingua/resources/: __init__.py  glossary_master_ro.json  icon.icns
lingua/ui/: __init__.py  activation_dialog.py  main_window.py  settings_panel.py  setup_dialog.py  themes.py  translation_workspace.py  workers.py
lingua/ui/widgets/: alignment_dialog.py  cache_dialog.py  editor.py  gated_widgets.py  local_cache_dialog.py  project_card.py  table.py  tour_overlay.py  tutorial_dialog.py
scripts/: convert_icon.py  license_generator.py  smoke_test_mac.py
tests/: test_checkpoint3.py  test_chunking.py  test_chunking_strict.py  test_phase1.py
tests/weirdest_extract/: content.opf  stylesheet.css  titlepage.xhtml  toc.ncx
tests/weirdest_extract/text/: part0000.html  (+61 more)
tools/: license_generator.py
